--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,23 @@
 {
   "name": "jonston/symfony-sanctum-bundle",
-  "version": "0.1.0-alpha",
+  "description": "A Symfony bundle that provides Laravel Sanctum-like personal access token authentication",
   "type": "symfony-bundle",
-  "description": "Simple token-based authentication for Symfony, inspired by Laravel Sanctum. Provides easy authentication via API tokens without the complexity of OAuth.",
-  "keywords": ["symfony", "authentication", "api", "token", "sanctum"],
   "license": "MIT",
   "authors": [
     {
       "name": "Eugene",
-      "email": "jonston85@gmail.com"
+      "email": "eugene@example.com"
     }
   ],
   "require": {
     "php": ">=8.1",
     "symfony/framework-bundle": "^6.0|^7.0",
     "symfony/security-bundle": "^6.0|^7.0",
-    "doctrine/orm": "^3.0",
-    "doctrine/doctrine-bundle": "^2.10"
+    "doctrine/orm": "^2.14|^3.0",
+    "doctrine/doctrine-bundle": "^2.8"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0",
+    "phpunit/phpunit": "^9.5|^10.0",
     "symfony/test-pack": "^1.0"
   },
   "autoload": {
@@ -31,5 +29,10 @@
     "psr-4": {
       "Jonston\\SanctumBundle\\Tests\\": "tests/"
     }
-  }
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
