--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -10,6 +10,8 @@ services:
       $tokenManager: '@Jonston\SanctumBundle\Service\TokenManager'
       $userProvider: null  # или укажите конкретный UserProvider если нужен
 
+  Jonston\SanctumBundle\Service\TokenHasher:
+
   # Основной сервис
   Jonston\SanctumBundle\Service\TokenManager:
     arguments:
